Modify Services, Link all texts,Add Bg on Contact

--- a/src/index.scss
+++ b/src/index.scss
@@ -5,13 +5,16 @@
 @import "./style/layout/header";
 @import "./style/layout/gridManager";
 @import "./style/layout/animatedBackground";
+@import "./style/layout/modal";
 @import "./style/components/boxSettings";
 @import "./style/components/buttons";
 @import "./style/components/rollingIcon";
 @import "./style/components/contactForm";
+@import "./style/components/flexBubbleContainer";
 @import "./style/pages/sections/sectionTitle";
 @import "./style/pages/sections/sectionIntro";
 @import "./style/pages/sections/sectionSkills";
+@import "./style/pages/sections/sectionStack";
 @import "./style/pages/sections/sectionExp";
 @import "./style/pages/sections/sectionAccordion";
 @import "./style/pages/sections/_sectionContact";
