--- a/src/style/layout/_animatedBackground.scss
+++ b/src/style/layout/_animatedBackground.scss
@@ -111,3 +111,86 @@
 #light #red .animatedBackground span:nth-child(n) {
   color: rgba($colorTheme_red, 0.05);
 }
+
+////! CUBE BG ::after
+
+@keyframes cube {
+  0% {
+    transform: scale(0) rotate(0deg) translate(-50%, -50%);
+    border-radius: 0;
+    opacity: 0.5;
+  }
+
+  80% {
+    border-radius: 50%;
+  }
+  100% {
+    transform: scale(20) rotate(960deg) translate(-50%, -50%);
+    opacity: 0;
+    border-radius: 50%;
+  }
+}
+
+.cubeBackground {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  margin: 0;
+  padding: 0;
+  background: transparent;
+  overflow: hidden;
+}
+.cubeBackground li {
+  position: absolute;
+  top: 80vh;
+  left: 45vw;
+  width: 10px;
+  height: 10px;
+  border: solid 1px rgba($colorTheme_blue, 0.9);
+  color: transparent;
+  transform-origin: top left;
+  transform: scale(0) rotate(0deg) translate(-50%, -50%);
+  animation: cube 24s ease-in forwards infinite;
+}
+.cubeBackground li:nth-child(0) {
+  animation-delay: 0s;
+  left: 98vw;
+  top: 40vh;
+}
+
+.cubeBackground li:nth-child(1) {
+  animation-delay: 1s;
+  left: 7vw;
+  top: 19vh;
+  border-color: rgba($colorTheme_blue, 0.9);
+}
+
+.cubeBackground li:nth-child(2) {
+  animation-delay: 3s;
+  left: 39vw;
+  top: 41vh;
+  border-color: rgba($colorTheme_green, 0.9);
+}
+
+.cubeBackground li:nth-child(3) {
+  animation-delay: 5s;
+  left: 62vw;
+  top: 88vh;
+  border-color: rgba($colorTheme_yellow, 0.9);
+}
+
+.cubeBackground li:nth-child(4) {
+  animation-delay: 7s;
+  left: 81vw;
+  top: 55vh;
+  border-color: rgba($colorTheme_purple, 0.9);
+}
+
+.cubeBackground li:nth-child(5) {
+  animation-delay: 10s;
+  left: 26vw;
+  top: 21vh;
+  border-color: rgba($colorTheme_red, 0.9);
+}
