--- a/src/style/layout/_gridManager.scss
+++ b/src/style/layout/_gridManager.scss
@@ -1,61 +1,269 @@
 .gridManager {
-  width: 100%;
-  height: auto;
+  position: relative;
+  max-width: 100%;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
-  grid-gap: 4vw;
+  grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+  grid-template-rows: minmax(150px, 1fr);
+
+  gap: 5px;
   grid-auto-flow: dense;
-  padding: 3rem 1rem;
+  margin: 5rem 0 2rem 0;
   justify-content: center;
   align-items: center;
+  padding: 1rem;
+  overflow: hidden;
 }
 
-.cardIconText {
+.gridManager__box {
   width: 100%;
-  height: auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 2rem;
+  height: 100%;
+  display: grid;
+  place-items: center;
+  text-align: center;
 
-  border-radius: 0.75rem;
+  position: relative;
 
-  & svg {
-    width: 40px;
-    height: 40px;
-    margin-bottom: 1rem;
+  &:nth-child(1) {
+    grid-column: span 2;
+    grid-row: span 1;
+  }
+  &:nth-child(2) {
+    grid-column: span 1;
+    grid-row: span 2;
+  }
+  &:nth-child(3) {
+    grid-column: span 3;
+    grid-row: span 1;
+  }
+  &:nth-child(4) {
+    grid-column: span 2;
+    grid-row: span 2;
+  }
+  &:nth-child(7) {
+    grid-column: span 2;
+    grid-row: span 1;
+  }
+  &:hover {
+    & .gridManager__box__card--cardA {
+      transform: perspective(1200px) rotateX(90deg);
+    }
+    & .gridManager__box__card--cardB {
+      transform: perspective(1200px) rotateX(0deg);
+    }
   }
 
-  & h2 {
-    margin-bottom: 1rem;
+  &__card--cardA:hover {
+    transition-delay: 0s;
   }
-  & p {
-    text-align: center;
-    margin-bottom: 1rem;
+
+  &__card--cardB:not(:hover) {
+    transition-delay: 0s;
+  }
+  &__card--cardB:hover {
+    cursor: pointer;
+  }
+
+  &__card {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 0.5rem;
+
+    perspective: 1200px;
+
+    &--cardA {
+      transform: rotateX(0deg);
+      transition: 0.3s ease-in-out;
+      transition-delay: 0.3s;
+    }
+    &--cardB {
+      position: absolute;
+      transform: rotateX(-90deg);
+      transition: 0.3s ease-in-out;
+      transition-delay: 0.3s;
+      //z-index: 2;
+    }
   }
 }
 
-#light .cardIconText {
+.box {
+  width: 100%;
+}
+
+.box {
+  &__content {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+    & svg {
+      width: 40px;
+      height: 40px;
+      margin: 1rem 0;
+    }
+    & h2 {
+      margin-bottom: 1rem;
+    }
+    & p {
+      margin-bottom: 1rem;
+      padding: 0 1rem 0rem 1rem;
+    }
+  }
+}
+
+#light .gridManager__box__card--cardA {
   background: rgba($color_page_bg_2_light, 0.2);
 }
+#yellow .box__content p,
+#green .box__content p {
+  color: $textColor_light;
+}
+#blue .box__content p,
+#purple .box__content p,
+#red .box__content p {
+  color: $textColor_dark;
+}
+#yellow .gridManager__box__card--cardB {
+  background: linear-gradient(
+    110deg,
+    $colorTheme_yellow 0%,
+    rgb(227, 187, 11) 100%
+  );
 
-#dark .cardIconText {
+  //background: $colorTheme_yellow;
+}
+#blue .gridManager__box__card--cardB {
+  background: linear-gradient(
+    110deg,
+    $colorTheme_blue 0%,
+    rgb(11, 124, 230) 100%
+  );
+}
+#red .gridManager__box__card--cardB {
+  background: linear-gradient(
+    110deg,
+    $colorTheme_red 0%,
+    rgb(210, 11, 11) 100%
+  );
+}
+#green .gridManager__box__card--cardB {
+  background: linear-gradient(
+    110deg,
+    $colorTheme_green 0%,
+    rgb(55, 218, 10) 100%
+  );
+}
+#purple .gridManager__box__card--cardB {
+  background: linear-gradient(
+    110deg,
+    $colorTheme_purple 0%,
+    rgb(151, 10, 212) 100%
+  );
+}
+
+#dark .gridManager__box__card--cardA {
   background: $color_page_bg_1_dark;
 }
-
-#green .cardIconText svg {
+#green .gridManager__box svg {
   fill: $colorTheme_green;
 }
-#blue .cardIconText svg {
+#blue .gridManager__box svg {
   fill: $colorTheme_blue;
 }
-#red .cardIconText svg {
+#red .gridManager__box svg {
   fill: $colorTheme_red;
 }
-#purple .cardIconText svg {
+#purple .gridManager__box svg {
   fill: $colorTheme_purple;
 }
-#yellow .cardIconText svg {
+#yellow .gridManager__box svg {
   fill: $colorTheme_yellow;
+}
+
+@media (min-width: 1411px) {
+  .gridManager__box {
+    &:nth-child(1) {
+      grid-column: span 2;
+      grid-row: span 1;
+    }
+    &:nth-child(2) {
+      grid-column: span 2;
+      grid-row: span 2;
+    }
+    &:nth-child(3) {
+      grid-column: span 2;
+      grid-row: span 1;
+    }
+    &:nth-child(4) {
+      grid-column: span 2;
+      grid-row: span 2;
+    }
+    &:nth-child(5) {
+      grid-column: span 2;
+      grid-row: span 1;
+    }
+    &:nth-child(6) {
+      grid-column: span 2;
+      grid-row: span 1;
+    }
+    &:nth-child(7) {
+      grid-column: span 2;
+      grid-row: span 1;
+    }
+  }
+}
+@media (max-width: 1150px) {
+  .gridManager__box {
+    &:nth-child(1) {
+      grid-column: span 2;
+      grid-row: span 1;
+    }
+    &:nth-child(2) {
+      grid-column: span 1;
+      grid-row: span 2;
+    }
+    &:nth-child(3) {
+      grid-column: span 2;
+      grid-row: span 1;
+    }
+    &:nth-child(4) {
+      grid-column: span 2;
+      grid-row: span 2;
+    }
+    &:nth-child(7) {
+      grid-column: span 2;
+      grid-row: span 1;
+    }
+  }
+}
+@media (max-width: 600px) {
+  .gridManager {
+    gap: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .gridManager__box {
+    width: 300px;
+    grid-column: span 2 !important;
+    grid-row: span 1 !important;
+
+    &__card--cardB {
+      padding: 1rem;
+      position: relative;
+      transform: rotateY(0deg);
+      border-radius: 0 0 1rem 1rem;
+    }
+    &__card--cardA {
+      transform: none !important;
+      border-radius: 1rem 1rem 0 0;
+    }
+  }
 }
