--- a/src/style/layout/_header.scss
+++ b/src/style/layout/_header.scss
@@ -1,262 +1,6 @@
-//* Global header :
-
-// .menu {
-//   position: fixed;
-//   width: 15vw;
-//   height: 100vh;
-//   z-index: 99;
-
-//   &__logo {
-//     width: auto;
-//     height: 20vh;
-
-//     display: flex;
-//     flex-direction: column;
-//     justify-content: flex-end;
-//     align-items: center;
-
-//     & img {
-//       width: 15vw;
-//       max-width: 60px;
-//       height: auto;
-//       transform: rotate(-90deg);
-//       object-fit: cover;
-//       //scale: 1.1;
-//       border-radius: 0.7rem;
-//     }
-//   }
-
-//   &__navigation {
-//     width: 100%;
-//     height: 100%;
-//     text-align: center;
-//     padding: 5rem 0;
-
-//     &__list {
-//       max-width: 150px;
-//       height: 30px;
-//       margin: auto;
-
-//       &--lign {
-//         position: relative;
-//         display: flex;
-//         flex-direction: row;
-//         justify-content: center;
-//         padding: 0 0 0.2rem 0;
-//         margin-bottom: 1.5rem;
-
-//         & p {
-//           width: 100%;
-//           text-align: center;
-//         }
-//       }
-//       &--lign::before {
-//         content: "";
-//         position: absolute;
-//         left: 0;
-//         bottom: -1px;
-//         width: 100%;
-//         height: 2px;
-
-//         transform-origin: center left;
-//         // transform: scaleX(0);
-//         transition: transform 0.3s ease-in;
-
-//         //! for color bg see ColorTheme
-//       }
-
-//       &--lign:hover::before {
-//         // transform: scaleX(1);
-//         border-bottom: none;
-//       }
-//     }
-//   }
-
-//   &__icon {
-//     width: 24px;
-//     height: 24px;
-//     // scale: 1.2;
-//     transform: translateY(-2px);
-//   }
-// }
-
-//* Light header :
-// #light {
-//   & .menu {
-//     background: linear-gradient(
-//       180deg,
-//       rgb(227, 225, 225) 1%,
-//       $color_header_bg_2_light 50%,
-//       rgb(227, 225, 225) 99%
-//     );
-
-//     &__icon {
-//       fill: $textColor_light;
-//     }
-
-//     &__link {
-//       color: $textColor_light;
-//     }
-
-//     &__navigation__list--lign {
-//       position: relative;
-//       border-bottom: 1px solid $color_header_bg_1_light;
-//     }
-
-//     &__logo img {
-//       background: rgba($color_header_bg-2_light, 0.4);
-//     }
-//   }
-// }
-
-//* Dark header :
-// #dark {
-//   & .menu {
-//     background: linear-gradient(
-//       180deg,
-//       $color_header_bg_1_dark 0%,
-//       rgb(22, 21, 22) 25%,
-//       $color_header_bg_2_dark 50%,
-//       rgb(22, 21, 22) 75%,
-//       $color_header_bg_1_dark 100%
-//     );
-
-//     &__icon {
-//       fill: $textColor_dark;
-//     }
-
-//     &__link {
-//       color: $textColor_dark;
-//     }
-//     &__navigation__list--lign {
-//       border-bottom: 1px solid $color_header_bg_1_light;
-//     }
-
-//     &__logo img {
-//       background: transparent;
-//     }
-//   }
-// }
-
-//* ColorTheme :
-
-// #red .menu__navigation__list--lign::before {
-//   background: $colorTheme_red;
-// }
-// #blue .menu__navigation__list--lign::before {
-//   background: $colorTheme_blue;
-// }
-// #green .menu__navigation__list--lign::before {
-//   background: $colorTheme_green;
-// }
-// #purple .menu__navigation__list--lign::before {
-//   background: $colorTheme_purple;
-// }
-// #yellow .menu__navigation__list--lign::before {
-//   background: $colorTheme_yellow;
-// }
-//* Declare Container
-
-// .menu {
-//   container-type: inline-size;
-//   container-name: "menu";
-// }
-
-// @container (max-width: 180px) {
-//   .menu__navigation__list--lign p {
-//     display: none;
-//   }
-//   .menu__logo img {
-//     transform: rotate(0deg);
-//   }
-// }
-
-//! For mobile :
-// @media (max-width: 600px) {
-//   .menu {
-//     position: fixed;
-//     width: 100vw;
-//     height: 50px;
-//     display: flex;
-//     flex-direction: row;
-//     justify-content: space-between;
-//     align-items: center;
-
-//     &__logo {
-//       width: auto;
-//       height: 50px;
-//       margin-left: 0.5rem;
-//       display: flex;
-//       flex-direction: column;
-//       justify-content: center;
-//       align-items: center;
-//       //scale: 0.5;
-
-//       & img {
-//         width: 100%;
-//         height: auto;
-//         margin-left: 0.5rem;
-//       }
-//     }
-
-//     &__icon {
-//       height: 20px;
-//     }
-
-//     &__navigation {
-//       width: 100%;
-//       height: auto;
-
-//       display: flex;
-//       flex-direction: row;
-//       justify-content: center;
-//       align-items: center;
-
-//       &__list {
-//         width: 100%;
-//         min-width: 350px;
-//         height: 50px;
-//         display: flex;
-//         flex-direction: row;
-//         justify-content: space-evenly;
-//         align-items: center;
-
-//         &--lign {
-//           height: 100%;
-//           display: flex;
-//           flex-direction: row;
-//           justify-content: center;
-//           align-items: center;
-//           border: none;
-//           padding: 0 5vw;
-//           margin-bottom: 0rem;
-//         }
-
-//         &--lign p {
-//           display: none;
-//         }
-//       }
-//     }
-//   }
-//   #light {
-//     & .menu {
-//       background: linear-gradient(
-//         180deg,
-//         $color_header_bg_1_light 0%,
-//         rgb(241, 239, 239) 10%,
-//         $color_header_bg_2_light 50%,
-//         rgb(241, 239, 239) 90%,
-//         $color_header_bg_1_light 100%
-//       );
-//     }
-//   }
-// }
-
-//! _____________________
-//:hover
-
 .newHeader {
-  --_labelSize: clamp(72px, 19vw, 160px);
+  --_labelSize: clamp(63px, 19vw, 160px);
+  --_jawaBtnSize: clamp(3.8rem, 3.5rem + 2vw, 4.5rem);
   width: 100%;
   height: 130px;
   position: fixed;
@@ -269,15 +13,12 @@
   //transform: translateY(0rem);
   padding: 0 1rem;
   transition: transform 0.8s ease-in-out;
-  &:hover {
-    transform: translateY(0rem);
-  }
 
   &::before,
   &::after {
     content: "";
     position: absolute;
-    width: calc((100vw - 4rem) / 2);
+    width: calc(((100vw - var(--_jawaBtnSize)) / 1.92));
     height: 2rem;
     bottom: 0rem;
     z-index: 99;
@@ -311,15 +52,15 @@
       padding: 0.6rem;
     }
     &--big {
-      height: 4rem;
-      width: 4rem;
+      height: var(--_jawaBtnSize);
+      width: var(--_jawaBtnSize);
       padding: 0.1rem;
       transform: translateY(4rem);
       z-index: 200;
     }
 
     & svg path {
-      fill: rgba($textColor_dark, 0.2);
+      fill: rgba($textColor_dark, 0.1);
     }
   }
 
@@ -399,13 +140,19 @@
     z-index: 1;
   }
 }
+@media (min-width: 501px) {
+  .newHeader:hover {
+    transform: translateY(0rem);
+  }
+}
+
 @media (min-width: 800px) {
   .newHeader {
     transform: translateY(-4.8rem);
     &::before,
     &::after {
       content: "";
-      width: calc((100vw - 5rem) / 2);
+      width: calc(((100vw - var(--_jawaBtnSize)) / 2));
     }
   }
   .newHeader__btn--big {
@@ -447,7 +194,7 @@
     );
 
     &__btn {
-      border: 4px #5e5a5a solid;
+      border: 2px #5e5a5a solid;
       background: linear-gradient(145deg, #c8c2c2, #b9bcc0);
       box-shadow: inset 2px 2px 2px #e0dae4, inset 2px 2px 0px #f3eeee;
     }
@@ -483,6 +230,7 @@
   }
   & .newHeader__hiddenPart {
     background: linear-gradient(#b4b4be 20%, transparent 60%);
+    pointer-events: none;
   }
 }
 #dark {
@@ -506,7 +254,7 @@
       background: linear-gradient(181deg, #221e1e 20%, #322f2f 80%);
     }
     &__btn {
-      border: 4px #090909 solid;
+      border: 2px #090909 solid;
       background: linear-gradient(145deg, #171717, #444245);
       box-shadow: inset 2px 2px 2px #7d7c7e, inset 2px 2px 0px #1c1c1c;
 
@@ -535,6 +283,7 @@
   }
   & .newHeader__hiddenPart {
     background: linear-gradient(#322c2c 20%, transparent 60%);
+    pointer-events: none;
   }
 }
 
