--- a/src/style/pages/sections/_sectionSkills.scss
+++ b/src/style/pages/sections/_sectionSkills.scss
@@ -1,9 +1,8 @@
 .sectionSkills {
   width: 100%;
-  //max-width: 1000px;
-  //height: 40vh; //! A changer
+  max-width: 1000px;
   padding: 1rem;
-  margin: 0 auto;
+  margin: 3rem auto 0rem auto;
 
   display: flex;
   flex-direction: column;
@@ -16,170 +15,13 @@
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    //border: 1px solid rgb(30, 0, 255);
-    &--top {
-      width: 100%;
-      //height: 5vh; //! A changer
-      display: flex;
-      flex-direction: row;
-      justify-content: space-evenly;
-      align-items: flex-start;
-      //border: 1px solid rgb(59, 233, 20);
-    }
-    &--bottom {
-      width: 100%;
-      //height: 5vh; //! A changer
-      display: flex;
-      flex-direction: row;
-      justify-content: space-evenly;
-      align-items: flex-start;
-      //border: 1px solid rgb(59, 233, 20);
-      padding: 3rem 0 2rem 0;
-    }
   }
   &__secondPart {
     width: 100%;
-    height: auto;
     display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
+    flex-direction: row;
+    justify-content: space-evenly;
     align-items: flex-start;
-    //border: 1px solid rgb(255, 13, 0);
+    padding: 4rem 0 1rem 0;
   }
 }
-
-.lignInfo {
-  width: 100%;
-  //min-width: 40vw;
-  display: flex;
-  flex-direction: column;
-  padding: 0.6rem 0;
-  border-bottom: 2px solid $color_header_bg_1_dark;
-
-  & label {
-    width: 100px;
-  }
-  & p {
-    width: 100%;
-    padding-left: 0.5rem;
-  }
-}
-
-.skill {
-  width: 100%;
-  margin-bottom: 0.5rem;
-
-  &__title {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: flex-start;
-    padding: 0.7rem 5vw 0.7rem 0;
-    //border: 1px green solid;
-  }
-
-  &__progress {
-    margin: 0 5vw 0 0;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-
-    &--percent {
-      width: 40%;
-      height: 4px;
-      //background: red;
-      border-radius: 2px 0 0 2px;
-    }
-    &--background {
-      width: 60%;
-      height: 4px;
-      background: $color_header_bg_1_dark;
-      border-radius: 0 2px 2px 0;
-    }
-  }
-}
-
-//* for tablet :
-@media (min-width: 600px) {
-  .sectionSkills {
-    &__firstPart {
-      width: 100%;
-      &--top {
-        flex-direction: row;
-        justify-content: space-evenly;
-        align-items: center;
-      }
-      &--bottom {
-        justify-content: space-evenly;
-        align-items: center;
-      }
-    }
-  }
-  .lignInfo {
-    flex-direction: row;
-  }
-}
-
-//* for desktop :
-@media (min-width: 1100px) {
-  .sectionSkills {
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-
-    &__firstPart {
-      &--top {
-        width: 100%;
-        justify-content: space-between;
-      }
-      &--bottom {
-        justify-content: space-evenly;
-      }
-    }
-  }
-
-  .lignInfo {
-    flex-direction: row;
-  }
-
-  .skill__title {
-    padding: 0.5rem 3vw;
-  }
-  .skill__progress {
-    margin: 0 3vw;
-  }
-}
-
-// //* Dark/Light Mode
-
-// #light .sectionIntro__container h1 {
-//   color: $textColor_light;
-// }
-
-// #dark .sectionIntro__container h1 {
-//   color: $textColor_dark;
-// }
-
-// //* ColorSet
-// #green .sectionIntro__container h1:before,
-// #green .sectionIntro__container h1:after {
-//   background: $colorTheme_green;
-// }
-// #purple .sectionIntro__container h1:before,
-// #purple .sectionIntro__container h1:after {
-//   background: $colorTheme_purple;
-// }
-// #blue .sectionIntro__container h1:before,
-// #blue .sectionIntro__container h1:after {
-//   background: $colorTheme_blue;
-// }
-// #yellow .sectionIntro__container h1:before,
-// #yellow .sectionIntro__container h1:after {
-//   background: $colorTheme_yellow;
-// }
-// #red .sectionIntro__container h1:before,
-// #red .sectionIntro__container h1:after {
-//   background: $colorTheme_red;
-// }
