--- a/src/style/settings/_settings.scss
+++ b/src/style/settings/_settings.scss
@@ -6,20 +6,21 @@
   width: auto;
   height: auto;
   top: 90px;
-  right: 0px;
+  right: 50px;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: flex-end;
   background: transparent;
-  //border: 1px solid red;
   border-bottom-left-radius: 1rem;
   border-top-left-radius: 1rem;
   z-index: 9;
-  transform-origin: 100px 0px;
+  transform-origin: right;
+  rotate: 270deg;
+  //transform-origin: 100px 0px;
 
-  transform: translateY(0px);
-  animation: moveParams 10s ease-in-out infinite alternate;
+  //transform: translateY(0px);
+  animation: moveParams 8s ease-in-out infinite alternate;
 
   &:hover {
     animation-play-state: paused;
@@ -113,7 +114,7 @@
 
 .blockDots {
   //!!! to start Dot :: delete display: none :
-  display: none;
+  //display: none;
   position: relative;
   width: auto;
   height: auto;
@@ -269,6 +270,6 @@
     transform: translateY(0vh);
   }
   100% {
-    transform: translateY(10vh);
+    transform: translateY(5vh);
   }
 }
